--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+  "dev": "next dev --turbopack",
+  "build": "NEXT_TELEMETRY_DISABLED=1 next build",
+  "start": "next start",
+  "lint": "next lint"
+},
+  
   "dependencies": {
     "next": "15.2.4",
     "react": "^19.0.0",
