--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev --turbopack",
-  "build": "NEXT_TELEMETRY_DISABLED=1 next build",
-  "start": "next start",
-  "lint": "next lint"
-},
-  
+    "dev": "next dev --turbopack",
+    "build": "NEXT_TELEMETRY_DISABLED=1 next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
+    "lucide-react": "^0.510.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
